fix: timestamps overflowing with dual route pill - the dual route pill takes up slightly more space on DUPs, leading to   overflow for the time - cuts the destination width even further to make up for extended times   and extended pills

--- a/assets/css/dup/departures/destination.scss
+++ b/assets/css/dup/departures/destination.scss
@@ -11,7 +11,7 @@
   // The width of the destination is reduced if either/both of the
   // route pill and time columns need to take up more space.
   .departure-row--extended-route_pill & {
-    width: 967px;
+    width: 810px;
   }
 
   .departures-section--extended-times & {
