--- a/assets/css/dup/departures/row.scss
+++ b/assets/css/dup/departures/row.scss
@@ -17,16 +17,19 @@
 
 .departure-row__route {
   display: inline-block;
+  width: 248px;
+  height: 144px;
+  margin: 32px;
   vertical-align: middle;
 
   .departure-row--extended-route_pill & {
     width: 351px;
   }
 
-  &:not(.departure-row__route--yellow) {
-    width: 248px;
-    height: 144px;
-    margin: 32px;
+  &.departure-row__route--yellow {
+    width: auto;
+    height: auto;
+    margin: 0;
   }
 }
 
